update contrast issue

--- a/src/components/SortFilter/style.module.scss
+++ b/src/components/SortFilter/style.module.scss
@@ -20,6 +20,7 @@
       font-weight: 500;
       letter-spacing: 0.5px;
       line-height: 16px;
+      color: #633081;
     }
   }
 
