--- a/src/pages/Member/About/styles.module.scss
+++ b/src/pages/Member/About/styles.module.scss
@@ -18,7 +18,7 @@
 }
 
 .summary {
-  color: $indigo;
+  color: black;
   font-size: 18px;
   line-height: 1.7;
 
